--- a/README.rmd
+++ b/README.rmd
@@ -44,7 +44,7 @@ devtools::install_github("ModelOriented/triplot")
 ```
 
 
-## Demo
+## Basic example
 
 ```{r include=FALSE}
 library("triplot")
@@ -53,7 +53,7 @@ library("DALEX")
 titanic <- titanic_imputed
 
 model_titanic_glm <-
-  glm(survived == 1 ~ class + gender + age + sibsp + parch + fare + embarked,
+  glm(survived == 1 ~ .,
       titanic,
       family = "binomial")
 
@@ -68,6 +68,7 @@ aspects_titanic <-
 ```
 
 For the `titanic` dataset we built logistic regression model that predicts passanger survival and group features into thematical aspects (`wealth` contains ticket' class and fare, `family` information about family members on board, `personal` includes age and gender and `embarked` remain as aspect with single feature). 
+
 We choose an existing passenger.
 
 ```{r }
@@ -75,13 +76,16 @@ passenger <- titanic[2,]
 
 passenger
 
+predict(model_titanic_glm, passenger, type = "response")
 ```
 
-We can check that the model prediction for this passenger's survival is very low, it's `r predict(model_titanic_glm, passenger, type = "response")`. 
+It turns out that the model prediction for this passenger's survival is very low. 
 
 Let's see which aspects have the biggest influence on it.
 
-We start by building `DALEX` explainer and use it to call `predict_aspects` function. Afterwards, we print and plot function results. We can observe that `wealth` variables have the biggest contribution to the prediction. This contribution is of a negative type. `Family` variables have positive influence on the prediction, but it is many times smaller. Rest of the aspects have very small contribution to the prediction.  
+We start by building `DALEX` explainer and use it to call `predict_aspects` function. Afterwards, we print and plot function results. 
+
+We can observe that `wealth` variables have the biggest contribution to the prediction. This contribution is of a negative type. `Family` variables have positive influence on the prediction, but it is many times smaller. Rest of the aspects have very small contribution to the prediction.  
 
 ```{r}
 explain_titanic <- explain(model_titanic_glm, 
